Copyright (c) 2002-2008 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 2.1 (unreleased)

    Features added:

      - 209497: Silva Link preview tab now displays rendered http link,
        rather than just redirecting.

      - 100974: the preview tab in the SMI now previews using the
        public layout, with the SMI tabs still at the top.

      - 101827: A) lookup window will now list containers for any type
        of lookup window.  You can click the container title to 
        "drill down" into the container, rather than (or in addition to)
        clicking the container's title in the sidebar.  In the cases
        where previously containers weren't listed, the containers 
        are now listed, but references cannot be placed to them.
        B) a "place reference to this container..." button was added,
        so you don't have to use the sidebar to navigate up one level
        C) Immediately when the radio button is selected, the reference
           is placed and the window is closed

      - Made 'keywords' metadata field an 'index field' by default

      - Use lxml instead of libxml2/libxslt for XSLT rendering. Note:
        still improve error handling, documentation, check encoding of
        output.

      - #200507: ZMI titles now appear for Silva objects.  The title
        is retrieved from the object's metadata.

      - Refactoring functional tests, built SilvaBrowser API for
        basic Silva functional tests.

      - Took out automatic install of SilvaFind when making a new
        Silva root. Instead a new option is added in the SilvaRoot
        addform to create a Search instance.

      - The css for form button controls has been refactored. There is
        now a standard class, 'button', which can be modified by
        adding a second class name, the action type which the button
        performs. These actions are: manipulator, transporter,